working on our services tab

--- a/services.html
+++ b/services.html
@@ -34,9 +34,27 @@
             $('#footer').load("footer.html");
 
         });
-        $('#firstToggle').click(function() {
-  $("#firstShow").toggle("slow");
-});
+        $(document).ready(function () {
+            $("#firstToggle").click(function () {
+                $("#firstShow").toggle();
+            });
+        });
+        $(document).ready(function () {
+            $("#secondToggle").click(function () {
+                $("#secondShow").toggle();
+            });
+        });
+        $(document).ready(function () {
+            $("#thirdToggle").click(function () {
+                $("#thirdShow").toggle();
+            });
+        });
+        $(document).ready(function () {
+            $("#forthToggle").click(function () {
+                $("#forthShow").toggle();
+            });
+        });
+
     </script>
 </head>
 
@@ -165,19 +183,55 @@
                     <div class="about-caption ">
                         <div class="row">
                             <div class="col-xs-12 col-lg-12 col-md-10">
-                               <ul>
-                                   <li id="firstToggle">How To Get GeM Registration?</li>
-                                   <li id="secondToggle">Why Product Listing On GeM Is Important?</li>
-                                   <li id="thirdToggle">Objective Of GeM Registration?</li>
-                                   <li id="forthToggle">Who is a Primary Buyer on GeM?</li>
-                                </ul>                     
                                 <div>
-                                    <p id="firstShow">
+                                    <h4 id="firstToggle" onclick="showhide(mydiv)">How To Get GeM Registration?</h4>
+                                    <div id="firstShow" class="custom-hidden card pl-4">
+                                        <p>
+                                        <h4>In order to obtain GeM Registration you must have following below documents
+                                            ready:</h4>
+
+                                        <ul>
+                                            <li class="m-2 font-weight-bold">PAN</li>
+
+                                            <li class="m-2 font-weight-bold"> AADHAR</li>
+
+                                            <li class="m-2 font-weight-bold">Income Tax Return</li>
+
+                                            <li class="m-2 font-weight-bold">Bank Details</li>
+
+                                            <li class="m-2 font-weight-bold">Registration Certificate of business entity
+                                            </li>
+                                        </ul>
+
+                                        <h4 class="mt-3 mb-3"> Once you have all of the above documents, our
+                                            professionals can help you register
+                                            under the GeM portal.</h4>
+                                        </p>
+                                    </div>
+                                    <h4 id="secondToggle" onclick="showhide(mydiv)">Why Product Listing On GeM Is
+                                        Important?</h4>
+                                    <div id="secondShow" class="custom-hidden card p-4">
+                                        <p>
+
+                                            GeM is an e-commerce portal where products and services can be sold to
+                                            government buyers when products and services are listed
+                                            properly.<br /><br />
+
+                                            You must upload product images, product specifications, price details,
+                                            delivery terms, inspection, and test reports, etc in order to sell your
+                                            products on GeM portal.<br /><br />
+
+                                            Our professionals can help you list your products and services properly.
+                                        </p>
+                                    </div>
+                                    <h4 id="thirdToggle" onclick="showhide(mydiv)">Objective Of GeM Registration?</h4>
+                                    <div id="thirdShow" class="custom-hidden">
+                                        <p>The purpose of getting a GeM registration is to ensure a smooth and effective procurement process for government offices requirement. Increase the transparency between private sellers and government buyers.</p>
+                                    </div>
+                                    <h4 id="forthToggle" onclick="showhide(mydiv)">Who is a Primary Buyer on GeM?</h4>
+                                    <p id="forthShow" class="custom-hidden">
                                         hi
                                     </p>
-                                    <p id="secondShow"></p>
-                                    <p id="thirdShow"></p>
-                                    <p id="forthShow"></p>
                                 </div>
                             </div>
                         </div>
@@ -711,7 +765,8 @@
                                             draggable="false"
                                             style="position: absolute; left: 0px; top: 0px; width: 66px; height: 26px; user-select: none; border: 0px; padding: 0px; margin: 0px;">
                                     </div>
-                                </a></div>
+                                </a>
+                            </div>
                             <div
                                 style="background-color: white; padding: 15px 21px; border: 1px solid rgb(171, 171, 171); font-family: Roboto, Arial, sans-serif; color: rgb(34, 34, 34); box-sizing: border-box; box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 16px; z-index: 10000002; display: none; width: 300px; height: 180px; position: absolute; left: 315px; top: 150px;">
                                 <div style="padding: 0px 0px 10px; font-size: 16px; box-sizing: border-box;">Map Data
@@ -735,7 +790,8 @@
                                     <div
                                         style="position: relative; padding-right: 6px; padding-left: 6px; box-sizing: border-box; font-family: Roboto, Arial, sans-serif; font-size: 10px; color: rgb(68, 68, 68); white-space: nowrap; direction: ltr; text-align: right; vertical-align: middle; display: inline-block;">
                                         <a style="text-decoration: none; cursor: pointer; display: none;">Map
-                                            Data</a><span>Map data ©2019 Google</span></div>
+                                            Data</a><span>Map data ©2019 Google</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="gmnoscreen" style="position: absolute; right: 0px; bottom: 0px;">
@@ -756,7 +812,8 @@
                                     <a href="https://www.google.com/intl/en-US_US/help/terms_maps.html" target="_blank"
                                         rel="noopener"
                                         style="text-decoration: none; cursor: pointer; color: rgb(68, 68, 68);">Terms of
-                                        Use</a></div>
+                                        Use</a>
+                                </div>
                             </div><button draggable="false" title="Toggle fullscreen view"
                                 aria-label="Toggle fullscreen view" type="button"
                                 class="gm-control-active gm-fullscreen-control"
@@ -781,7 +838,8 @@
                                         title="Report errors in the road map or imagery to Google"
                                         href="https://www.google.com/maps/@-31.197,150.744,9z/data=!10m1!1e1!12b1?source=apiv3&amp;rapsrc=apiv3"
                                         style="font-family: Roboto, Arial, sans-serif; font-size: 10px; color: rgb(68, 68, 68); text-decoration: none; position: relative;">Report
-                                        a map error</a></div>
+                                        a map error</a>
+                                </div>
                             </div>
                             <div class="gmnoprint gm-bundled-control gm-bundled-control-on-bottom" draggable="false"
                                 controlwidth="40" controlheight="81"
