working on our services tab

--- a/services.html
+++ b/services.html
@@ -184,7 +184,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-lg-12 col-md-10">
                                 <div>
-                                    <h4 id="firstToggle" onclick="showhide(mydiv)">How To Get GeM Registration?</h4>
+                                    <h4 id="firstToggle" onclick="showhide(mydiv)" class="mb-35 font-25">How To Get GeM Registration?  <i class="fas fa-chevron-down"></i></h4>
                                     <div id="firstShow" class="custom-hidden card pl-4">
                                         <p>
                                         <h4>In order to obtain GeM Registration you must have following below documents
@@ -208,8 +208,8 @@
                                             under the GeM portal.</h4>
                                         </p>
                                     </div>
-                                    <h4 id="secondToggle" onclick="showhide(mydiv)">Why Product Listing On GeM Is
-                                        Important?</h4>
+                                    <h4 id="secondToggle" onclick="showhide(mydiv)" class="mb-35 font-25">Why Product Listing On GeM Is
+                                        Important?<i class="fas fa-chevron-down"></i></h4>
                                     <div id="secondShow" class="custom-hidden card p-4">
                                         <p>
 
@@ -224,19 +224,52 @@
                                             Our professionals can help you list your products and services properly.
                                         </p>
                                     </div>
-                                    <h4 id="thirdToggle" onclick="showhide(mydiv)">Objective Of GeM Registration?</h4>
-                                    <div id="thirdShow" class="custom-hidden">
-                                        <p>The purpose of getting a GeM registration is to ensure a smooth and effective procurement process for government offices requirement. Increase the transparency between private sellers and government buyers.</p>
+                                    <h4 id="thirdToggle" onclick="showhide(mydiv)" class="mb-35 font-25">Objective Of GeM Registration? <i class="fas fa-chevron-down"></i></h4>
+                                    <div id="thirdShow" class="custom-hidden p-4">
+                                        <p>The purpose of getting a GeM registration is to ensure a smooth and effective
+                                            procurement process for government offices requirement. Increase the
+                                            transparency between private sellers and government buyers.</p>
                                     </div>
-                                    <h4 id="forthToggle" onclick="showhide(mydiv)">Who is a Primary Buyer on GeM?</h4>
-                                    <p id="forthShow" class="custom-hidden">
-                                        hi
-                                    </p>
+                                    <h4 id="forthToggle" onclick="showhide(mydiv)" class="mb-35 display-5 font-25">Who is a Primary Buyer on GeM? <i class="fas fa-chevron-down"></i></h4>
+                                    <div id="forthShow" class="custom-hidden card p-4">
+
+                                        <p>
+                                            <h4 class="mb-4">The following types of Authorized officers can register as Primary User on
+                                            GeM who is equivalent to –
+                                        </h4>
+
+                                        <ul class="font-weight-bold">
+                                            <li class="pl-4">Secretary</li>
+                                            <li class="pl-4">Head of the Office at Sub Center / Unit </li>
+                                            <li class="pl-4">Branch of a Government Organization</li>
+                                            <li class="pl-4">A PSU</li>
+                                            <li class="pl-4">Autonomous Bodies</li>
+                                            <li class="pl-4">Local Bodies</li>
+                                            <li class="pl-4">Constitution Bodies</li>
+                                            <li class="pl-4">Statuary Bodies</li>
+                                        </ul>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div id="elementor-tab-content-1004" class="elementor-tab-content elementor-clearfix elementor-active"
+                data-tab="4" role="tabpanel" aria-labelledby="elementor-tab-title-1004" style="display: block;">
+                <p>The following types of Authorized officers can register as Primary User on GeM who is&nbsp;equivalent
+                    to&nbsp;–</p>
+                <ul>
+                    <li>Deputy Secretary</li>
+                    <li>Head of the Office at Sub Center / Unit&nbsp;</li>
+                    <li>Branch of a Government Organization</li>
+                    <li>A PSU</li>
+                    <li>Autonomous Bodies</li>
+                    <li>Local Bodies</li>
+                    <li>Constitution Bodies</li>
+                    <li>Statuary Bodies</li>
+                </ul>
             </div>
         </section>
         <!--? Categories Area Start -->
