--- a/our-clients.html
+++ b/our-clients.html
@@ -1046,8 +1046,8 @@
             </div>
         </section>
         <!-- Want To work End 2-->
-    </main> <div id="footer"></div>
-    </footer>
+    </main>
+    <div id="footer"></div>
     <!--? Search model Begin -->
     <div class="search-model-box">
         <div class="h-100 d-flex align-items-center justify-content-center">
