--- a/our-clients.html
+++ b/our-clients.html
@@ -34,27 +34,6 @@
             $('#footer').load("footer.html");
 
         });
-        $(document).ready(function () {
-            $("#firstToggle").click(function () {
-                $("#firstShow").toggle();
-            });
-        });
-        $(document).ready(function () {
-            $("#secondToggle").click(function () {
-                $("#secondShow").toggle();
-            });
-        });
-        $(document).ready(function () {
-            $("#thirdToggle").click(function () {
-                $("#thirdShow").toggle();
-            });
-        });
-        $(document).ready(function () {
-            $("#forthToggle").click(function () {
-                $("#forthShow").toggle();
-            });
-        });
-
     </script>
 </head>
 
@@ -73,17 +52,36 @@
     <!-- Preloader Start -->
     <div id="header"></div>
     <main>
-        <!--? Hero Start -->
-        <section>
-            <div class="section-title mb-35">
-
-                <h1>Our Services</h1>
-            </div>
-            <div class="cut-corner">
-                <h1 class="display-1 pt-200 text-light font-weight-bold">What We Provide</h1>
+       
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-10">
+                     
+                            <div class="row justify-content-center">
+                                <div class="col-xs-12 col-lg-12 col-md-10">
+                                    <div>
+                                        <p class="display-1 font-weight-bold">
+                                            Our Clients
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>
+                                A few of our clients.
+                            </p>
+                        </div>
+                </div>
             </div>
         </section>
-        <!-- Hero End -->
+
 
 
 
