minor changes in or services tab

--- a/blog.html
+++ b/blog.html
@@ -236,6 +236,50 @@
 
 
 
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <h2 class="text-center display-4 font-weight-bold mb-30">Why Learn About Government e-Marketplace?</h2>
+                <div class="row">
+
+                    <div class="col-xl-4 col-lg-4 col-md-9">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic24.png" alt="">
+                            </div>
+                            <!-- <div class="img-cap">c
+                                    <span>20</span>
+                                    <p>Years of experience</p>
+                            </div> -->
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-9">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic24.png" alt="">
+                            </div>
+                            <!-- <div class="img-cap">c
+                                    <span>20</span>
+                                    <p>Years of experience</p>
+                            </div> -->
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-9">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic24.png" alt="">
+                            </div>
+                            <!-- <div class="img-cap">c
+                                    <span>20</span>
+                                    <p>Years of experience</p>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
     </main>
 
     <div id="footer"></div>
