--- a/services.html
+++ b/services.html
@@ -73,17 +73,17 @@
     <!-- Preloader Start -->
     <div id="header"></div>
     <main>
-        <!--? Hero Start -->
+    
         <section>
             <div class="section-title mb-35">
 
-                <h1>Our Services</h1>
+                <h1 class="text-right pt-20 pr-20">Our Services</h1>
             </div>
             <div class="cut-corner">
                 <h1 class="display-1 pt-200 text-light font-weight-bold">What We Provide</h1>
             </div>
         </section>
-        <!-- Hero End -->
+      
 
 
 
@@ -179,7 +179,7 @@
                         </div> -->
                     </div>
                 </div>
-                <div class="col-xl-5 col-lg-6 col-md-10 ml-4">
+                <div class="col-xl-5 col-lg-6 col-md-10 ml-4 align-self-center">
                     <div class="about-caption ">
                         <div class="row">
                             <div class="col-xs-12 col-lg-12 col-md-10">
@@ -266,12 +266,8 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic17.png" alt="">
+                                <img src="assets/img/trinity/Pic17.png" alt="" style="width: 70%; height: auto;">
                             </div>
-                            <!--  <div class="img-cap">
-                            <span>20</span>
-                            <p>Years of experience</p>
-                        </div> -->
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10">
