--- a/header.html
+++ b/header.html
@@ -43,20 +43,8 @@
                                             <li><a href="about.html">Our Packages</a></li>
                                             <li><a href="services.html">Our Services</a></li>
                                             <li><a href="project.html">Required Documents</a></li>
-                                            <li><a href="blog.html">Trinity Training</a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="blog_details.html">Blog Details</a></li>
-                                                    <li><a href="elements.html">Element</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="our-clients.html">Our Clients</a>
-                                                <ul class="submenu">
-                                                    <li><a href="project_details.html">Project Details</a></li>
-                                                    <li><a href="services_details.html">Services Details</a></li>
-                                                    <li><a href="elements.html">Element</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="blog.html">Trinity Training</a></li>
+                                            <li><a href="our-clients.html">Our Clients</a></li>
                                             <li><a href="contact.html">Contact Us</a></li>
                                         </ul>
                                     </nav>
