what we provide text responsive

--- a/blog.html
+++ b/blog.html
@@ -87,9 +87,9 @@
                             </div>
                         </div>
                         <p>
-                            Learn How You Can Upload Your Products And Services On Gem Portal. Make Your Product Or
-                            Services Live On Gem. Grow Your Business On Gem With Our Gem Portal Training. A Complete
-                            Virtual And Personalized Gem Seller Training Course For All The GeM Sellers.
+                            Learn How You Can Upload Your Products And Services On Trinity Balaji Portal. Make Your Product Or
+                            Services Live On Trinity Balaji. Grow Your Business On Trinity Balaji With Our Trinity Balaji Portal Training. A Complete
+                            Virtual And Personalized Trinity Balaji Seller Training Course For All The Trinity Balaji Sellers.
                         </p>
                     </div>
                     <div class="col-xl-4 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
@@ -118,8 +118,8 @@
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
                                 <h2 class="display-4 font-weight-bold text-center mb-30">
-                                    Get Training For GeM Portal From
-                                    GeM Portal Experts
+                                    Get Training For Trinity Balaji Portal From
+                                    Trinity Balaji Portal Experts
                                 </h2>
                             </div>
                         </div>
@@ -204,15 +204,15 @@
                         <div class="about-caption mb-50">
 
                             <p>
-                                Currently, GeM Portal Skills are one of the highest required in the market. Each and
-                                every company working with government organizations needs an employee who is a GeM
-                                Expert that’s why everyone is learning about GeM.
+                                Currently, Trinity Balaji Portal Skills are one of the highest required in the market. Each and
+                                every company working with government organizations needs an employee who is a Trinity Balaji
+                                Expert that’s why everyone is learning about Trinity Balaji.
                             <ul class="pl-5">
                                 <li><i class="fas fa-check blueiconcolor"></i> Easy To Learn</li>
                                 <li><i class="fas fa-check blueiconcolor"></i> High Demand In Market</li>
-                                <li><i class="fas fa-check blueiconcolor"></i> GeM Is Future Of Tendering</li>
+                                <li><i class="fas fa-check blueiconcolor"></i> Trinity Balaji Is Future Of Tendering</li>
                                 <li><i class="fas fa-check blueiconcolor"></i> Work From Virtual Locations</li>
-                                <li><i class="fas fa-check blueiconcolor"></i> Start Your Own Business With GeM</li>
+                                <li><i class="fas fa-check blueiconcolor"></i> Start Your Own Business With Trinity Balaji</li>
                             </ul>
 
                             </p>
@@ -242,38 +242,120 @@
                 <div class="row">
 
                     <div class="col-xl-4 col-lg-4 col-md-9">
+                        <h1 class="text-center font-weight-bold">Manufacturers (OEM)</h1>
                         <div class="about-right-cap">
-                            <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic24.png" alt="">
+                            <div class="about-right-img pt-10">
+                                <img src="assets/img/trinity/Pic25.png" alt="">
                             </div>
-                            <!-- <div class="img-cap">c
-                                    <span>20</span>
-                                    <p>Years of experience</p>
-                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-9">
+                        <h1 class="text-center font-weight-bold">Traders (Resellers)</h1>
                         <div class="about-right-cap">
-                            <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic24.png" alt="">
+                            <div class="about-right-img pt-35">
+                                <img src="assets/img/trinity/Pic26.png" alt="" style="width: 80%; height: auto;">
                             </div>
-                            <!-- <div class="img-cap">c
-                                    <span>20</span>
-                                    <p>Years of experience</p>
-                            </div> -->
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-9">
+                    <div class="col-xl-4 col-lg-4 col-md-9 nopadding">
                         <div class="about-right-cap">
+                            <h1 class="text-center font-weight-bold">Service Providers</h1>
+
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic24.png" alt="">
+                                <img src="assets/img/trinity/Pic27.png" alt="">
                             </div>
-                            <!-- <div class="img-cap">c
-                                    <span>20</span>
-                                    <p>Years of experience</p>
-                            </div> -->
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+
+
+        <section class="about-low-area section-padding40 mb-50">
+            <div class="container">
+                <div class="text-center">
+                    <h4 class="orangetextcolor  pt-40 ">TRINITY PORTAL TRAINING FOR SELLERS</h4>
+                    <h1 class="font-weight-bold">How To Learn About Trinity Seller Training</h1>
+                </div>
+                <div class="row">
+                    <div class="col-xl-6 col-lg-7 col-md-9 align-self-center">
+                        <h2 class="display-3 font-weight-bold text-center mb-30">
+                            Get Complete Training For Trinity Sellers
+                        </h2>
+
+                    </div>
+                    <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1 pt-10">
+
+                        <div>
+                            <img src="assets/img/trinity/Pic23.png" alt="">
+                        </div>
+
+                    </div>
+                   
+                </div>
+            </div>
+        </section>
+
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h1 class="text-center">What We Do?</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-xl-12 col-lg-12 col-md-10">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+
+                            <div class="text-center custom-width-70">
+                            <p>
+                                We are known for our training sessions. Our experts are training people regularly. GeM Portal Seller training for those who want to grow their business on gem.
+                                <br/><br/>
+                                <u class="orangeunderline">EXPLORE OUR SERVICES
+                                    READ OUR BLOG
+                                    MEET OUR TEAM</u>
+                            </p>
+                        </div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="card border-0 text-center">
+                                        <div class="card-body">
+                                            <h2 class="card-title">
+                                                Welcome Every Client</h2>
+                                            <p class="card-text">Book your session timing with us.</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4">
+                                    <div class="card border-0 text-center">
+                                        <div class="card-body">
+                                            <h2 class="card-title">
+                                                Execute with Empathy</h2>
+                                            <p class="card-text">Start taking your sessions with us.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card border-0 text-center">
+                                        <div class="card-body">
+                                            <h2 class="card-title">
+                                                Make them Experts</h2>
+                                            <p class="card-text text-rght">Start handling your gem account as pro.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
         </section>
