--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
                 <h1 class="text-right pt-20 pr-20">Our Services</h1>
             </div>
             <div class="cut-corner">
-                <h1 class="display-1 pt-200 text-light font-weight-bold">What We Provide</h1>
+                <h1 class="text-light font-weight-bold" style="font-size:7vw;">What We Provide</h1>
             </div>
         </section>
       
